frontend/test/should_pass/hom_003.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node;
		hom(x, y, z);
		hom(e, f);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

